#546 Fix deprecation java.net.URL